--- a/public/index.html
+++ b/public/index.html
@@ -41,4 +41,8 @@
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
   </body>
+  <!-- To base 64 conversion  -->
+  <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/react/15.1.0/react.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/react/15.1.0/react-dom.min.js"></script> -->
+
 </html>
